--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ html(lang="{{ str_replace('_', '-', app()->getLocale()) }}")
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    title Laravel
+    title Chidi4Xchange
     // Fonts
     link(href='https://fonts.googleapis.com/css?family=Nunito:200,600', rel='stylesheet', type='text/css')
     // Styles
