--- a/views/index.jade
+++ b/views/index.jade
@@ -54,4 +54,4 @@ html(lang="{{ str_replace('_', '-', app()->getLocale()) }}")
     .flex-center.position-ref.full-height
       .content
         .title.m-b-md
-          | Chiji14 API Services
+          | Chiji14 API Service
